--- a/notes/guidelines/guidelines.tex
+++ b/notes/guidelines/guidelines.tex
@@ -399,11 +399,14 @@ This is a list of template information for the {\tt Annote} {\sc Bib}\TeX\ field
 	\end{enumerate}
 \item Originally published in: 20XY.
 \item Also, published in: 20XY.
+\item Conference proceedings published in: 20XY.
+\item Address of publisher, rather than conference location is: BLAH.
 \item Originally published by BLAH in BLAH--BLAH.
 \item Also, published by BLAH in BLAH--BLAH.
 \item Also, published as BLAH (old series title and old volume number).
 \item Alternate publisher name: BLAH.
 \item Reprinted in 20XY by BLAH.
+\item Distributed by: BLAH.
 \item Copyright renewed in 20XY.
 \item Alternate series title: BLAH.
 \item Address is officially stated in: BLAH.
@@ -416,6 +419,8 @@ This is a list of template information for the {\tt Annote} {\sc Bib}\TeX\ field
 \item Repeat entry. See $\backslash$cite\{BIbTeX keys\}.
 \item Received a copy of this report by email.
 \item BibTeX key of English translation: BLAH.
+\item Actual name of author: BLAH.
+\item Actual name of co-authors: BLAH and BLAH.
 \item Translated by: BLAH.
 \item Associated files are formerly named: {\tt BLAH.file\_extension}, ...
 \item Former BibTeX key is: {\tt Former BibTeX key}.
@@ -443,7 +448,7 @@ This is a list of template information for the {\tt Annote} {\sc Bib}\TeX\ field
 
 
 
-%	Check if I can push commit.
+
 
 
 
