Add names of organizations & their addresses.

--- a/notes/guidelines/guidelines.tex
+++ b/notes/guidelines/guidelines.tex
@@ -388,9 +388,15 @@ In addition, to cite the specific page numbers of interest, use the {\sc Bib}\Te
 
 This is a list of template information for the {\tt Annote} {\sc Bib}\TeX\ field to help me identify particular information about the document/publication: \vspace{-0.3cm}
 \begin{enumerate} \itemsep -4pt
-\item Authors' names (alternate): blah, blah blah, blah blah blah, \dots
-\item Full names of authors: BLAH-1 and BLAH-2.
-\item Alternate names of $[$Author XYZ$]$: BLAH-1 and BLAH-2.
+\item Alternate names of authors: blah, blah blah, blah blah blah, \dots \vspace{-0.3cm}
+	\begin{enumerate} \itemsep -2pt
+	\item Deprecated: \vspace{-0.2cm}
+		\begin{enumerate} \itemsep -2pt
+		\item Authors' names (alternate): BLAH-1 and BLAH-2.
+		\item Full names of authors: BLAH-1 and BLAH-2.
+		\item Alternate names of $[$Author XYZ$]$: BLAH-1 and BLAH-2.
+		\end{enumerate}
+	\end{enumerate}
 \item When citing from this entry, shift the names of the authors from the author field to the editor field.
 \item Editors: BLAH ... BLAH ... BLAH.: \vspace{-0.3cm}
 	\begin{enumerate} \itemsep -2pt
